[bdist_wheel]
universal = 1

[metadata]
name = sweetrpg-db
version = attr: sweetrpg_db.__version__
url = https://sweetrpg.com
project_urls =
    Documentation = https://sweetrpg.github.io/db
license = MIT
author = Paul Schifferer
author_email = dm@sweetrpg.com
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_required = >=3.12

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sweetrpg-db = sweetrpg_db.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    sweetrpg_db
    tests

[coverage:paths]
source =
    src
    */site-packages

[semantic_release]
version_variable = src/sweetrpg_db/__init__.py:__version__
branch = develop
